fix: image position on smaller screens

--- a/src/app/components/champions/champion-details/champion-details.component.scss
+++ b/src/app/components/champions/champion-details/champion-details.component.scss
@@ -74,3 +74,9 @@
     }
   }
 }
+
+@media only screen and (max-width: 920px) {
+  .container {
+    background-position: center;
+  }
+}
